<?xml version="1.0"?>
<package>
  <name>datalink_launch</name>
  <version>0.1.0</version>
  <description>Launch files for datalink nodes, including a version of openni2_launch modified to support divorced TF trees</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>

</package>
