<?xml version="1.0"?>
<package>
  <name>teleop_launch</name>
  <version>0.0.1</version>
  <description>The teleop_launch package</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>

</package>
