<?xml version="1.0"?>
<package>
  <name>teleop_toolkit</name>
  <version>0.0.1</version>
  <description>The teleop_toolkit package</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
