<?xml version="1.0"?>
<package>
  <name>teleop_toolkit</name>
  <version>0.0.1</version>
  <description>The teleop_toolkit package</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>teleop_msgs</run_depend>
  <run_depend>teleop_mux_demux</run_depend>
  <run_depend>opportunistic_link</run_depend>
  <run_depend>teleop_launch</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
